# namingpaper

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_metadata_extraction.py
.claude/skills/release/: SKILL.md
.claude/skills/uv-rules/: SKILL.md
.codex/skills/uv-rules/: SKILL.md
openspec/: project.md
openspec/changes/update-python-314-support/: proposal.md  tasks.md
openspec/changes/update-python-314-support/specs/python-compat/: spec.md
src/namingpaper/: __init__.py  batch.py  cli.py  config.py  extractor.py  formatter.py  models.py  pdf_reader.py  renamer.py  template.py
src/namingpaper/providers/: __init__.py  base.py  claude.py  gemini.py  ollama.py  openai.py
tests/: __init__.py  conftest.py  test_batch.py  test_cli.py  test_config.py  test_formatter.py  test_glm_ocr.py  test_metadata_extraction.py  test_renamer.py  test_template.py
